@@ -6,8 +6,11 @@
   and position within a line (Tag.sourcepos).  Based on code by Chris
   Mayo. [bug=1742921]
 
-* Fixed a bug that made it impossible to pretty-print tags that were not
-   created during initial parsing. [bug=1838903]
+* Fixed a crash when pretty-printing tags that were not created
+   during initial parsing. [bug=1838903]
+
+* Copying a Tag preserves information that was originally obtained from
+   the TreeBuilder used to build the original Tag. [bug=1838903]
 
 = 4.8.0 (20190720, "One Small Soup")
 
